Applied object fit on trending memes to fix warping, but images are a bit cropped

--- a/public/stylesheets/components/trending-memes.css
+++ b/public/stylesheets/components/trending-memes.css
@@ -95,7 +95,8 @@ div.trending-memes{
 
 img.trending-meme{
     height: 250px;
-    width:250px;
+    width: 250px;
+    object-fit: cover;
     border-radius: 3%;
 }
 
